CMAKE_MINIMUM_REQUIRED(VERSION 3.1 FATAL_ERROR)
PROJECT(HPVCreatorConsole)

# CMake build options.
set (CMAKE_CXX_STANDARD 11)

# Compile flags
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/../HPV_Creator)

ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/../HPV_Creator ${CMAKE_CURRENT_BINARY_DIR}/HPV_Creator)

SET(APP_SRCS
	main.cpp)
SET(APP_BIN HPVCreatorConsole)

ADD_EXECUTABLE(${APP_BIN} ${APP_SRCS})

set(EXECUTABLE_OUTPUT_PATH ../output/${CMAKE_BUILD_TYPE})

TARGET_LINK_LIBRARIES(${APP_BIN} HPV_Creator)